--- a/html/index.html
+++ b/html/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Первая верстка</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -105,10 +104,10 @@
 
                         <div class="sectionFour_Review">
                             <div class="Review_Avatar">
-                                <img class="Review_AvatarOne"  src="../Image/Ellipse 2ForAvatar.png" alt="">
-                                <img class="Review_AvatarTwo" src="../Image/Ellipse 3.png" alt="">
-                                <img class="Review_AvatarThree" src="../Image/Ellipse 4.png" alt="">
-                                <img class="Review_AvatarFour" src="../Image/Ellipse 5.png" alt="">
+                                <img class="Review_AvatarOne"  src="../Image/Ellipse2ForAvatar.png" alt="">
+                                <img class="Review_AvatarTwo" src="../Image/Ellipse3.png" alt="">
+                                <img class="Review_AvatarThree" src="../Image/Ellipse4.png" alt="">
+                                <img class="Review_AvatarFour" src="../Image/Ellipse5.png" alt="">
                             </div>
 
                             <div class="Review_Frame1">
